# Code2

./: Code2  Code2.c  Makefile  Makefile.am  Makefile.in  Makefile5  README  README.md  config.status  configure  configure.ac  libobj.la  libtool  objetosc.h  pole.h
.libs/: Code2  libobj.lai  libobj.so.1.0.0
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
src/: Code2.c  objetosc.c  objetosc.lo  pole.c
src/.deps/: Code2.Po  Zadanie4.Po  objetosc.Plo  objetosc4.Plo  pole.Po  pole4.Po
